--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,12 @@
 </head>
 <body>
   <app-root></app-root>
+  <div id="globalLoader" class="global-loader">
+    <div class="gears">
+      <img src="/assets/images/gear_big.png" alt="gear" class="big">
+      <img src="/assets/images/gear_small.png" alt="gear" class="small">
+      <h1>ЗАГРУЗКА</h1>
+    </div>
+  </div>
 </body>
 </html>
